--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     
-      <p>Twemail is a Twisted server that acts as a proxy between Twitter and your email application, by providing POP and SMTP implementations that interacts with Twitter.</p>
+      <p>Twemail is a Twisted server that acts as a proxy between Twitter and your email application, by providing POP and SMTP implementations that interact with Twitter.</p>
       <p> Twemail allows you to read and write tweets using your mail client. It also supports replying and retweeting.</p>
     
 
